clean up and document ListDeque class